styling fixed for skills section

--- a/index.html
+++ b/index.html
@@ -136,9 +136,9 @@
           </p>
 
           <li class="tags">
-            <a href="" class="tag1"><h3>html</h3> </a
-            ><a href="" class="tag2"><h3>css</h3> </a
-            ><a href="" class="tag3"><h3>javascript</h3> </a>
+            <a href="" class="tag"><h3>html</h3> </a
+            ><a href="" class="tag"><h3>css</h3> </a
+            ><a href="" class="tag"><h3>javascript</h3> </a>
           </li>
           <li class="btn">
             <a data-name="One" class="work-button">See Project</a>
@@ -182,9 +182,9 @@
           </p>
 
           <li class="tags">
-            <a href="" class="tag1"><h3>html</h3> </a
-            ><a href="" class="tag2"><h3>css</h3> </a
-            ><a href="" class="tag3"><h3>javascript</h3> </a>
+            <a href="" class="tag"><h3>html</h3> </a
+            ><a href="" class="tag"><h3>css</h3> </a
+            ><a href="" class="tag"><h3>javascript</h3> </a>
           </li>
           <li class="btn">
             <a data-name="Two" class="work-button">See Project</a>
@@ -230,9 +230,9 @@
           </p>
 
           <li class="tags">
-            <a href="" class="tag1"><h3>rails</h3> </a
-            ><a href="" class="tag2"><h3>ruby</h3> </a
-            ><a href="" class="tag3"><h3>postgresql</h3> </a>
+            <a href="" class="tag"><h3>rails</h3> </a
+            ><a href="" class="tag"><h3>ruby</h3> </a
+            ><a href="" class="tag"><h3>postgresql</h3> </a>
           </li>
           <li class="btn">
             <a data-name="Three" class="work-button">See Project</a>
@@ -276,9 +276,9 @@
           </p>
 
           <li class="tags">
-            <a href="" class="tag1"><h3>react</h3> </a
-            ><a href="" class="tag2"><h3>css</h3> </a
-            ><a href="" class="tag3"><h3>redux</h3> </a>
+            <a href="" class="tag"><h3>react</h3> </a
+            ><a href="" class="tag"><h3>css</h3> </a
+            ><a href="" class="tag"><h3>redux</h3> </a>
           </li>
           <li class="btn">
             <a data-name="Four" class="work-button">See Project</a>
@@ -390,14 +390,10 @@
         </div>
         <div class="skills-dropdown" id="skills-menu">
           <ul class="skills-dropdown-ul">
-            <div>
-              <li class="skills-dropdown-li">Web Developer</li>
-              <li class="skills-dropdown-li">Remote work</li>
-            </div>
-            <div>
-              <li class="skills-dropdown-li">Management</li>
-              <li class="skills-dropdown-li">Communication</li>
-            </div>
+            <li class="skills-dropdown-li">Web Developer</li>
+            <li class="skills-dropdown-li">Remote work</li>
+            <li class="skills-dropdown-li">Management</li>
+            <li class="skills-dropdown-li">Communication</li>
           </ul>
         </div>
         <div class="lang-seperators">
