More skills added

--- a/index.html
+++ b/index.html
@@ -390,10 +390,12 @@
         </div>
         <div class="skills-dropdown" id="skills-menu">
           <ul class="skills-dropdown-ul">
-            <li class="skills-dropdown-li">Web Developer</li>
+            <li class="skills-dropdown-li">Git, Github</li>
             <li class="skills-dropdown-li">Remote work</li>
-            <li class="skills-dropdown-li">Management</li>
-            <li class="skills-dropdown-li">Communication</li>
+            <li class="skills-dropdown-li">Render, Netlify</li>
+            <li class="skills-dropdown-li">Code Reviewer</li>
+            <li class="skills-dropdown-li">Mentor</li>
+            <li class="skills-dropdown-li">Dev Tools</li>
           </ul>
         </div>
         <div class="lang-seperators">
