transition effect on social icons

--- a/index.html
+++ b/index.html
@@ -69,27 +69,27 @@
 
         <div class="hero-socialcontainer">
           <ul class="social-container">
-            <li>
+            <li class="social-icons-all">
               <a href="https://twitter.com/StudiosNabeel"
                 ><img src="./Pictures/Social/twitter.png" alt="Twitter logo"
               /></a>
             </li>
-            <li>
+            <li class="social-icons-all">
               <a href="https://www.linkedin.com/in/studiosnabeel/"
                 ><img src="./Pictures/Social/linkedin.png" alt="Linkedin logo"
               /></a>
             </li>
-            <li>
+            <li class="social-icons-all">
               <a href="https://medium.com/@studiosnabeel"
                 ><img src="./Pictures/Social/m.png" alt="m logo"
               /></a>
             </li>
-            <li>
+            <li class="social-icons-all">
               <a href="https://github.com/studiosnabeel"
                 ><img src="./Pictures/Social/github.png" alt="Github logo"
               /></a>
             </li>
-            <li>
+            <li class="social-icons-all">
               <a href="https://wellfound.com/u/nabeel-akbar"
                 ><img src="./Pictures/Social/victory.png" alt="Angellist logo"
               /></a>
@@ -300,29 +300,31 @@
           contact me.
         </p>
 
+        <!-- About Section/Skills -->
+
         <a href="#contactMe" class="letsConnect"><h3>LET'S CONNECT</h3> </a>
         <ul class="social-container">
-          <li>
+          <li class="social-icons-all">
             <a href="https://github.com/studiosnabeel"
               ><img src="./Pictures/Social/github.png" alt="Github logo"
             /></a>
           </li>
-          <li>
+          <li class="social-icons-all">
             <a href="https://www.linkedin.com/in/studiosnabeel/"
               ><img src="./Pictures/Social/linkedin.png" alt="Linkedin logo"
             /></a>
           </li>
-          <li>
+          <li class="social-icons-all">
             <a href="https://wellfound.com/u/nabeel-akbar"
               ><img src="./Pictures/Social/victory.png" alt="Angellist logo"
             /></a>
           </li>
-          <li>
+          <li class="social-icons-all">
             <a href="https://twitter.com/StudiosNabeel"
               ><img src="./Pictures/Social/twitter.png" alt="Twitter logo"
             /></a>
           </li>
-          <li>
+          <li class="social-icons-all">
             <a href="https://medium.com/@studiosnabeel"
               ><img src="./Pictures/Social/m.png" alt="m logo"
             /></a>
@@ -330,8 +332,6 @@
         </ul>
         <a href="./Resume/Nabeel's Resume.pdf" class="btn1">Get my Resume</a>
       </section>
-
-      <!-- About Section/Skills -->
 
       <section class="languages">
         <div class="lang-div">
