Fix broken links and open links in new tab

--- a/index.html
+++ b/index.html
@@ -70,27 +70,29 @@
         <div class="hero-socialcontainer">
           <ul class="social-container">
             <li class="social-icons-all">
-              <a href="https://twitter.com/StudiosNabeel"
+              <a href="https://twitter.com/StudiosNabeel" target="_blank"
                 ><img src="./Pictures/Social/twitter.png" alt="Twitter logo"
               /></a>
             </li>
             <li class="social-icons-all">
-              <a href="https://www.linkedin.com/in/studiosnabeel/"
+              <a
+                href="https://www.linkedin.com/in/studiosnabeel/"
+                target="_blank"
                 ><img src="./Pictures/Social/linkedin.png" alt="Linkedin logo"
               /></a>
             </li>
             <li class="social-icons-all">
-              <a href="https://medium.com/@studiosnabeel"
+              <a href="https://medium.com/@studiosnabeel" target="_blank"
                 ><img src="./Pictures/Social/m.png" alt="m logo"
               /></a>
             </li>
             <li class="social-icons-all">
-              <a href="https://github.com/studiosnabeel"
+              <a href="https://github.com/studiosnabeel" target="_blank"
                 ><img src="./Pictures/Social/github.png" alt="Github logo"
               /></a>
             </li>
             <li class="social-icons-all">
-              <a href="https://wellfound.com/u/nabeel-akbar"
+              <a href="https://wellfound.com/u/nabeel-akbar" target="_blank"
                 ><img src="./Pictures/Social/victory.png" alt="Angellist logo"
               /></a>
             </li>
@@ -103,7 +105,11 @@
 
     <section class="work" id="port-folio">
       <article class="card" id="work-article-1">
-        <a href="https://studiosnabeel.github.io/codeeasy/" class="snapshot">
+        <a
+          href="https://studiosnabeel.github.io/codeeasy/"
+          target="_blank"
+          class="snapshot"
+        >
           <img
             class="image-1"
             src="./Worksection Pics/codeeasy.PNG"
@@ -136,9 +142,22 @@
           </p>
 
           <li class="tags">
-            <a href="" class="tag"><h3>html</h3> </a
-            ><a href="" class="tag"><h3>css</h3> </a
-            ><a href="" class="tag"><h3>javascript</h3> </a>
+            <a
+              href="https://developer.mozilla.org/en-US/docs/Web/HTML"
+              target="_blank"
+              class="tag"
+              ><h3>html</h3> </a
+            ><a
+              href="https://developer.mozilla.org/en-US/docs/Web/CSS"
+              target="_blank"
+              class="tag"
+              ><h3>css</h3> </a
+            ><a
+              href="https://developer.mozilla.org/en-US/docs/Web/JavaScript"
+              target="_blank"
+              class="tag"
+              ><h3>javascript</h3>
+            </a>
           </li>
           <li class="btn">
             <a data-name="One" class="work-button">See Project</a>
@@ -148,6 +167,7 @@
       <article class="card" id="work-article-2">
         <a
           href="https://studiosnabeel.github.io/groupCapstone/dist/"
+          target="_blank"
           class="snapshot"
           id="swap-pos"
         >
@@ -182,9 +202,22 @@
           </p>
 
           <li class="tags">
-            <a href="" class="tag"><h3>html</h3> </a
-            ><a href="" class="tag"><h3>css</h3> </a
-            ><a href="" class="tag"><h3>javascript</h3> </a>
+            <a
+              href="https://developer.mozilla.org/en-US/docs/Web/HTML"
+              target="_blank"
+              class="tag"
+              ><h3>html</h3> </a
+            ><a
+              href="https://developer.mozilla.org/en-US/docs/Web/CSS"
+              target="_blank"
+              class="tag"
+              ><h3>css</h3> </a
+            ><a
+              href="https://developer.mozilla.org/en-US/docs/Web/JavaScript"
+              target="_blank"
+              class="tag"
+              ><h3>javascript</h3>
+            </a>
           </li>
           <li class="btn">
             <a data-name="Two" class="work-button">See Project</a>
@@ -192,7 +225,11 @@
         </ul>
       </article>
       <article class="card" id="work-article-3">
-        <a href="https://mysite-g8gc.onrender.com/" class="snapshot">
+        <a
+          href="https://mysite-g8gc.onrender.com/"
+          target="_blank"
+          class="snapshot"
+        >
           <img
             src="./Worksection Pics/pocketpal.PNG"
             alt="Desktop Third Project demo"
@@ -230,9 +267,22 @@
           </p>
 
           <li class="tags">
-            <a href="" class="tag"><h3>rails</h3> </a
-            ><a href="" class="tag"><h3>ruby</h3> </a
-            ><a href="" class="tag"><h3>postgresql</h3> </a>
+            <a
+              href="https://guides.rubyonrails.org/"
+              target="_blank"
+              class="tag"
+              ><h3>rails</h3> </a
+            ><a
+              href="https://www.ruby-lang.org/en/documentation/"
+              target="_blank"
+              class="tag"
+              ><h3>ruby</h3> </a
+            ><a
+              href="https://www.postgresql.org/docs/"
+              target="_blank"
+              class="tag"
+              ><h3>postgresql</h3>
+            </a>
           </li>
           <li class="btn">
             <a data-name="Three" class="work-button">See Project</a>
@@ -242,6 +292,7 @@
       <article class="card" id="work-article-4">
         <a
           href="https://countries-stats.netlify.app/"
+          target="_blank"
           class="snapshot"
           id="swap-pos"
         >
@@ -276,9 +327,22 @@
           </p>
 
           <li class="tags">
-            <a href="" class="tag"><h3>react</h3> </a
-            ><a href="" class="tag"><h3>css</h3> </a
-            ><a href="" class="tag"><h3>redux</h3> </a>
+            <a
+              href="https://legacy.reactjs.org/docs/getting-started.html"
+              target="_blank"
+              class="tag"
+              ><h3>react</h3> </a
+            ><a
+              href="https://developer.mozilla.org/en-US/docs/Web/CSS"
+              target="_blank"
+              class="tag"
+              ><h3>css</h3> </a
+            ><a
+              href="https://redux-toolkit.js.org/introduction/getting-started"
+              target="_blank"
+              class="tag"
+              ><h3>redux</h3>
+            </a>
           </li>
           <li class="btn">
             <a data-name="Four" class="work-button">See Project</a>
@@ -305,32 +369,34 @@
         <a href="#contactMe" class="letsConnect"><h3>LET'S CONNECT</h3> </a>
         <ul class="social-container">
           <li class="social-icons-all">
-            <a href="https://github.com/studiosnabeel"
+            <a href="https://github.com/studiosnabeel" target="_blank"
               ><img src="./Pictures/Social/github.png" alt="Github logo"
             /></a>
           </li>
           <li class="social-icons-all">
-            <a href="https://www.linkedin.com/in/studiosnabeel/"
+            <a href="https://www.linkedin.com/in/studiosnabeel/" target="_blank"
               ><img src="./Pictures/Social/linkedin.png" alt="Linkedin logo"
             /></a>
           </li>
           <li class="social-icons-all">
-            <a href="https://wellfound.com/u/nabeel-akbar"
+            <a href="https://wellfound.com/u/nabeel-akbar" target="_blank"
               ><img src="./Pictures/Social/victory.png" alt="Angellist logo"
             /></a>
           </li>
           <li class="social-icons-all">
-            <a href="https://twitter.com/StudiosNabeel"
+            <a href="https://twitter.com/StudiosNabeel" target="_blank"
               ><img src="./Pictures/Social/twitter.png" alt="Twitter logo"
             /></a>
           </li>
           <li class="social-icons-all">
-            <a href="https://medium.com/@studiosnabeel"
+            <a href="https://medium.com/@studiosnabeel" target="_blank"
               ><img src="./Pictures/Social/m.png" alt="m logo"
             /></a>
           </li>
         </ul>
-        <a href="./Resume/Nabeel's Resume.pdf" class="btn1">Get my Resume</a>
+        <a href="./Resume/Nabeel's Resume.pdf" target="_blank" class="btn1"
+          >Get my Resume</a
+        >
       </section>
 
       <section class="languages">
@@ -420,6 +486,7 @@
 
       <form
         action="https://formspree.io/f/xwkzojgo"
+        target="_blank"
         method="post"
         class="form-js"
       >
