Add Personalized Aboutme info

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
         </h1>
         <p>
           I'm a software developer! I can help you build a product, feature or
-          website look through some of my work and experience! If you like what
+          website. Look through some of my work and experience! If you like what
           you see and have a project you need coded, don't hesitate to contact
           me.
         </p>
@@ -358,10 +358,15 @@
         <h2>About Myself</h2>
 
         <p>
-          Hello I’m a software developer! I can help you build a product ,
-          feature or website Look through some of my work and experience! If you
-          like what you see and have a project you need coded, don’t hestiate to
-          contact me.
+          I have extensive experience working remotely, taking on difficult
+          tasks, and effectively cooperating with cross-functional teams as a
+          devoted Full-Stack Developer. With a solid grasp of React, Redux, Ruby
+          on Rails, Ruby, JavaScript, HTML5, and CSS3, I work to develop new and
+          seamless solutions. I enjoy working in places where problems need to
+          be solved, and I'm always looking for ways to improve my abilities. I
+          am prepared to contribute to any professional team's success since I
+          am dedicated to excellence. Let's connect and discuss how I can bring
+          value to your organization.
         </p>
 
         <!-- About Section/Skills -->
@@ -480,8 +485,8 @@
 
       <p>
         If you have an application you are interested in developing, a feature
-        that you need built or a project that needs coding. I’d love to help
-        with it
+        that you need to build or a project that needs coding. I’d love to help
+        with it.
       </p>
 
       <form
