--- a/index.html
+++ b/index.html
@@ -197,7 +197,7 @@
           </li>
 
           <p>
-            Movie Nights is a Single page app where users can watch latest
+            Movie Nights is a Single page app where users can watch the latest
             movies. Modular JavaScript was applied for this project.
           </p>
 
@@ -262,7 +262,7 @@
           </li>
 
           <p>
-            This Rails Full-stack app is a expenses tracking app. It supports
+            This Rails Full-stack app is an expense-tracking app. It supports
             user registration and authentication using the Devise gem.
           </p>
 
@@ -323,7 +323,7 @@
 
           <p>
             This React-Redux application fetches data of Countries from an API
-            and shows All Countries population and capitals.
+            and shows all Country's populations and capitals.
           </p>
 
           <li class="tags">
