Bit more modify text

--- a/index.html
+++ b/index.html
@@ -136,9 +136,9 @@
           </li>
 
           <p>
-            Code Easy is an Online teaching website created for students to
-            learn software development. It is created using HTML CSS and Vanilla
-            JavaScript.
+            Code Easy is an online teaching website created for students to
+            learn software development. It is created using HTML, CSS and
+            Vanilla JavaScript.
           </p>
 
           <li class="tags">
