Search analytics activated

--- a/index.html
+++ b/index.html
@@ -9,6 +9,12 @@
       src="https://kit.fontawesome.com/a5120177aa.js"
       crossorigin="anonymous"
     ></script>
+    <script
+      defer
+      data-domain="nabeel-akbar-portfolio.netlify.app"
+      src="https://plausible.io/js/script.js"
+    ></script>
+
     <title>Nabeel's Portfolio</title>
   </head>
 
